commit# : added the logic for deposit,withdraw, transfer and  transaction history

--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -20,8 +20,9 @@ logging.level.com.example=DEBUG
 management.endpoints.web.exposure.include=*
 management.info.env.enable=true
 
-account.service.url=http://localhost:8082/api/v1/customerDetails/
-update.account.service.url=http://localhost:8082/api/v1/balance/
+#ACCOUNT-SERVICE URL
+account.service.url=http://localhost:8082/api/v1
+customer.service.url=http://localhost:8081/api/v1
 
 #Eureka client configuration
 eureka.client.register-with-eureka=true
